# log-analyzer-cli

./: .gitignore  CHANGELOG.md  CONTRIBUTING.md  LICENSE  README.md  SECURITY.md  ZOBOT.md  config.json  pyproject.toml  requirements-dev.txt
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: ci.yml
src/log_analyzer_cli/: __init__.py  analyzer.py  cli.py  utils.py
src/log_analyzer_cli/formatters/: __init__.py  json.py  table.py  text.py
src/log_analyzer_cli/parsers/: __init__.py  apache.py  base.py  generic.py  json_log.py  syslog.py
tests/: __init__.py  conftest.py  test_analyzer.py  test_cli.py  test_parsers.py
